# chanban

./: .gitignore  .workmux.yaml  MIDTERM_REVIEW.md  TEST_WORKER.md  docker-compose.yml  package.json  pnpm-lock.yaml  railway.toml  turbo.json  vercel.json
.claude/: settings.local.json
.github/workflows/: ci-develop.yml  ci-main.yml  ci-master.yml
.interface-design/: system.md
agent/: plan.md  research.md
apps/api/: .dockerignore  .env.example  .gitignore  Dockerfile  package.json
apps/api/src/: app.module.ts  main.ts  (+1 more)
apps/crawler/: .env.example  .gitignore  Makefile  README.md  plan.md  posts_cache.json  pyproject.toml  research.md
apps/crawler/scripts/: generate-bot-token.mjs
apps/crawler/src/: config.py  main.py
apps/crawler/src/analyzer/: chain.py  prompts.py
apps/crawler/src/api/: client.py
apps/crawler/src/crawlers/: article.py  comment.py  ranking.py
apps/crawler/src/crawlers/community/: __init__.py  base.py  clien.py  ruliweb.py
apps/crawler/src/models/: schemas.py
apps/web/: .env.example  .gitignore  components.json  docs.md  next.config.mjs  package.json  vercel.json
docs/: supabase-setup.md
stitch_chanban_topic_list_screen/chanban_create_topic_screen/: code.html
stitch_chanban_topic_list_screen/chanban_login_&_auth_screen/: code.html
stitch_chanban_topic_list_screen/chanban_topic_detail_screen/: code.html
stitch_chanban_topic_list_screen/chanban_topic_list_screen_1/: code.html
stitch_chanban_topic_list_screen/chanban_topic_list_screen_2/: code.html
stitch_chanban_topic_list_screen/chanban_topic_list_screen_3/: code.html
(+252 files in other folders)
