[project]
name = "chanban-crawler"
version = "0.1.0"
description = "네이버 뉴스 크롤링 → LangChain 분석 → 찬반 토론 주제 자동 생성"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3",
    "langchain-google-genai>=4.0",
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "tenacity>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
